<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="queensCountVar"
            type="String" />

        <variable
            name="queensAndKingsCountVar"
            type="String" />

        <variable
            name="emptyStr"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        tools:context=".fragments.CalcFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_form"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TitleTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:fontFamily="@font/asap_medium"
                    android:text="@string/boardsize_title" />

                <EditText
                    android:id="@+id/boardSizeEdit"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="@string/number_hint"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TitleTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:fontFamily="@font/asap_medium"
                    android:text="@string/amount_of_queens_title" />

                <EditText
                    android:id="@+id/queensAmountEdit"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="@string/number_hint"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TitleTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:fontFamily="@font/asap_medium"
                    android:text="@string/amount_of_kings_title" />

                <EditText
                    android:id="@+id/kingSizeEdit"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="@string/number_hint"
                    android:inputType="number" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/calcButton"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_back"
            android:padding="8dp"
            android:text="@string/calculate_btn_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_form"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/queens_counter_title"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/queens_count"
                    style="@style/TitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@{ queensCountVar == null ? emptyStr : queensCountVar }"
                    android:textSize="45sp"
                    tools:text="213907213" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/queens_and_kings_title"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/queens_and_kings_count"
                    style="@style/TitleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@{ queensAndKingsCountVar == null ? emptyStr : queensAndKingsCountVar }"
                    android:textSize="45sp"
                    tools:text="213907213" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/cancel_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/inactive_button_back"
            android:clickable="false"
            android:padding="8dp"
            android:text="@string/cancel_btn_text" />

    </LinearLayout>
</layout>